report4/doc/vocabularium/lv/landbouwgebruiksperceel/v0.1.0/oslo-converter-ea.report.md
#||# oslo-converter-ea for diagram Landbouwgebruiksperceel

#||# -------------------------------------

2026-08-04T13:10:14.328Z info: Connector Model:VKBO:Rechtsvormtype-v1:(Rechtsvormtype-v1 -> OrganisatieType-v1) is not an association with a source role. Ignoring this connector.

2026-08-04T13:10:14.330Z info: Connector Model:VKBO:Rechtspersoonlijkheidtype-v1:(Rechtspersoonlijkheidtype-v1 -> OrganisatieType-v1) is not an association with a source role. Ignoring this connector.

2026-08-04T13:10:14.330Z info: Connector Model:W3C-ORG:Organisatie:(Organisatie -> Organisatie) is not an association with a source role. Ignoring this connector.

2026-08-04T13:10:14.331Z info: Connector Model:W3C-REGORG:GeregistreerdeOrganisatie:(GeregistreerdeOrganisatie -> Agent) is not an association with a source role. Ignoring this connector.

2026-08-04T13:10:14.331Z info: Connector Model:OSLO-Persoon:GeregistreerdPersoon:(GeregistreerdPersoon -> Agent) is not an association with a source role. Ignoring this connector.

2026-08-04T13:10:14.331Z info: Connector Model:W3C-REGORG:GeregistreerdeOrganisatie:(GeregistreerdeOrganisatie -> Organisatie) is not an association with a source role. Ignoring this connector.

2026-08-04T13:10:14.331Z info: Connector Model:OSLO-Landbouwgebruiksperceel:Landbouwgebruiksperceel:(Landbouwgebruiksperceel -> Agent) is not an association with a source role. Ignoring this connector.

2026-08-04T13:10:14.331Z info: Connector Model:OSLO-Persoon:GeregistreerdPersoon:(GeregistreerdPersoon -> Persoon) is not an association with a source role. Ignoring this connector.

2026-08-04T13:10:14.332Z info: Connector Model:W3C-Person:Persoon:(Persoon -> Agent) is not an association with a source role. Ignoring this connector.

2026-08-04T13:10:14.332Z info: Connector Model:W3C-ORG:Organisatie:(Organisatie -> Agent) is not an association with a source role. Ignoring this connector.

2026-08-04T13:10:14.332Z info: Connector Model:Belgif-Auth:Activiteittype-NACEBEL2025:(Activiteittype-NACEBEL2025 -> Activiteittype-v1) is not an association with a source role. Ignoring this connector.

2026-08-04T13:10:14.332Z info: Connector Model:OSLO-Landbouwgebruiksperceel:LandbouwActiviteit-v1:(LandbouwActiviteit-v1 -> Activiteittype-v1) is not an association with a source role. Ignoring this connector.

2026-08-04T13:10:14.333Z info: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model). Using fallback URI (http://todo.com/) instead.

#||# -------------------------------------

